# Seattle-Source-Ranker

./: .env.example  .env.tokens  .gitattributes  .gitignore  README.backup.md  README.md  collect  dasd  environment.yml  pyproject.toml  pytest.ini  requirements.txt
collectors/: graphql_client.py
data/: seattle_projects_100.json  seattle_projects_1000.json  seattle_projects_20.json  seattle_projects_20251115_205418.json  seattle_projects_20251120_220648.json  seattle_projects_20251201_074039.json  seattle_projects_30.json  seattle_projects_50.json  seattle_projects_distributed_20251104_021102.json  seattle_projects_hybrid_10000.json  seattle_projects_hybrid_10000_metadata.json  seattle_projects_large_200.json  seattle_projects_unlimited_20251106_160531.json  seattle_pypi_projects.json  seattle_users_20251106_101901.json  seattle_users_20251115_210633.json  seattle_users_20251120_005135.json  seattle_users_20251122_002921.json  seattle_users_20251124_003402.json  seattle_users_20251129_003046.json  seattle_users_20251201_002706.json  seattle_users_20251202_093038.json
distributed/: DISTRIBUTED_SETUP.md  Dockerfile.worker  __init__.py  distributed_collector.py  docker-compose.yml  start_workers.sh  stop_workers.sh
docs/: ARCHITECTURE.md  COLLECTION_GUIDE.md  MULTI_TOKEN_GUIDE.md  TROUBLESHOOTING.md  USER_STORIES.md  VERSION_HISTORY.md
frontend/: package-lock.json  package.json
hw3-test/: json_to_csv.py  pytest.ini  test_hw3_Chase-zou.py  test_hw3_muwen320.py  test_hw3_thomas0829.py  test_hw3_wenshu0206.py  validate_repo_metrics.py
scripts/: secondary_update.py  (+8 more)
(+12967 files in other folders)
